Fix spacing
The presence of e.g. a Spinner should not increase the element height;
define vertical padding on the text only.

Add margin besides the caret.

--- a/ui/src/components/search/facets/SearchFilterFacet.scss
+++ b/ui/src/components/search/facets/SearchFilterFacet.scss
@@ -5,7 +5,7 @@
 
   & > .opener {
     display: flex;
-    padding: $aleph-grid-size;
+    padding: 0 $aleph-grid-size;
     align-items: center;
 
     &.active {
@@ -18,11 +18,16 @@
     }
 
     & > .caret {
+      margin-right: $aleph-grid-size * 0.5;
       transition: transform 100ms;
 
       &.rotate {
         transform: rotate(90deg);
       }
+    }
+
+    & > .text {
+      padding: $aleph-grid-size 0;
     }
 
     & > .clearButton {
